--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -26,8 +26,23 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Build
-        uses: ./.github/actions/build_setup
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 17
+    
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          cache-write-only: ${{ inputs.update-cache }}
+          generate-job-summary: false
+          gradle-home-cache-includes: |
+            caches
+            caches/retro_futura_gradle
+            notifications
+            jdks
+            wrapper
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
